Добавил и подключил шрифты

--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,12 @@
-/*Шапка сайта*/
+@font-face {
+  font-family: 'Courier New';
+  src: url(../fonts/Courier\ New.ttf);
+}
+@font-face {
+  font-family: 'Verdana';
+  src: url(../fonts/ofont.ru_Verdana.ttf);
+}
+@font-face {
+  font-family: 'VerdanaBold';
+  src: url(../fonts/ofont.ru_Verdana_bold.ttf);
+}
