--- a/css/main.css
+++ b/css/main.css
@@ -20,3 +20,17 @@
   --dark-black: #111111;
   --grey: #565656;
 }
+
+.section {
+  display: flex;
+  background-color: var(--black);
+  color: var(--light-grey);
+  height: 280px;
+  align-items: center;
+  justify-content: center;
+  
+}
+.advantages img {
+  margin-bottom: 27px;
+}
+
