Сверстал основной раздел с шапкой

--- a/css/main.css
+++ b/css/main.css
@@ -19,4 +19,44 @@
   --yellow: #feca30;
   --dark-black: #111111;
   --grey: #565656;
+  --text-color: #d4d4d4;
+}
+
+/* header */
+#main{
+  font-family: 'Verdana';
+  background: var(--dark-grey);
+  height: 95vh;
+}
+#menu div{
+  margin-top: 84px;
+}
+#menu :not(:first-child) a{
+ margin-right: 30px;
+ text-decoration: none;
+ color: var(--text-color);
+ font-size: 14px;
+}
+.main-text div h1{
+  font-size: 45px;
+  color: var(--white);
+  font-family: 'Courier New';
+  font-weight: bold;
+}
+.main-text div p{
+  color: var(--text-color);
+  font-size: 14px;
+  margin: 50px 0 80px 0;
+}
+.main-text div a{
+  background-color: var(--yellow);
+  text-decoration: none;
+  padding: 20px 20px 20px 30px;
+  border-radius: 100px;
+  color: var(--black);
+  font-family: 'VerdanaBold';
+  text-transform: uppercase;
+}
+.main-text div a img{
+  padding-left: 70px;
 }
